Actualizar index.html
se agrego imagen de previsualización

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Desarrollador web" />
     <meta name="keywords" content="desarrollo web, desarrollo wordpress, desarrollador web, programador wordpress, diseño web, developer, frontend"/>
     <meta name="author" content="frederick corredor" />
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+ <meta property="og:image" content="images/pngwing.com (32).png">        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
     <title>Frederick Corredor</title>
 </head>
