Actualizar index.html
se modifican enlaces al catálogo de lusstore y el de clases online

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         se agregan elementos interactivos, 
                         transiciones y animaciones.
                     </p>
-                    <a href="https://frederickcorredor.github.io/curso/" target="_blank" rel="noopener" rel="noreferrer">Ver página</a>
+                    <a href="https://frederickcorredor.github.io/clases/" target="_blank" rel="noopener" rel="noreferrer">Ver página</a>
                     <a href="https://github.com/frederickcorredor/curso" target="_blank" rel="noopener" rel="noreferrer">Ver código</a>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                     <p>Catálogo para tienda de ropa íntima femenina
                         con contenido desplegable, elementos animados y botón de whatsapp
                     </p>
-                    <a href="https://frederickcorredor.github.io/luststore/luststore/" target="_blank" rel="noopener" rel="noreferrer">Ver página</a>
+                    <a href="https://frederickcorredor.github.io/luststore/" target="_blank" rel="noopener" rel="noreferrer">Ver página</a>
                     <a href="https://github.com/frederickcorredor/luststore" target="_blank" rel="noopener" rel="noreferrer">Ver código</a>
                 </div>
             </div>
