--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
             </div>
             <div class="elements"data-aos="fade-up">
                 <div class="caraA1">
+                    <img src="tienda.png" alt="desarrollo web para niños"data-aos="fade-up"data-aos-delay="300">
+                </div>
+                <div class="caraB1">
+                    <p>Ejemplo de tienda virtual relizada con
+                        Html5, Css y JavaScript incluye carro de
+                        compras y enlazado al whatsapp, util para
+                        tiendas que no disponen de una plataforma de pagos.
+                    </p>
+                    <a href="https://frederickcorredor.github.io/ejemplotienda/" target="_blank" rel="noopener" rel="noreferrer">Ver página</a>
+                    <a href="https://github.com/frederickcorredor/ejemplotienda/" target="_blank" rel="noopener" rel="noreferrer">Ver código</a>
+                </div>
+            </div>
+            <div class="elements"data-aos="fade-up">
+                <div class="caraA1">
                     <img src="images/parrillas.png" alt="menu restaurante de carnes" data-aos="fade-up"data-aos-delay="300">
                 </div>
                 <div class="caraB1">
