--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                     <img src="tienda.png" alt="desarrollo web para niños"data-aos="fade-up"data-aos-delay="300">
                 </div>
                 <div class="caraB1">
-                    <p>Ejemplo de tienda virtual relizada con
-                        Html5, Css y JavaScript incluye carro de
+                    <p>Ejemplo de tienda virtual incluye carro de
                         compras y enlazado al whatsapp, util para
                         tiendas que no disponen de una plataforma de pagos.
                     </p>
