--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="carrousel-item"><img src="3.png" alt=""></div>
             <div class="carrousel-item"><img src="4.png" alt=""></div>
             <div class="carrousel-item"><img src="5.png" alt=""></div>
-            <div class="carrousel-item"><img src="6.png" alt=""></div>
+            <div class="carrousel-item"><img src="7.png" alt=""></div>
           </div>
         </div>
         <button class="carousel-nav right">&gt;</button>
@@ -130,10 +130,10 @@
         <a href="https://frederickcorredor.github.io/clases/" target="_blank">Ver sitio</a>
       </div>
       <div class="proyecto">
-        <img src="6.png" alt="Sitio 3" data-full="6.png">
-        <h3>Gigowatt</h3>
+        <img src="6.png" alt="Sitio 3" data-full="7.png">
+        <h3>Thermica Ingenieria</h3>
         <p>Web informativa de empresa de tecnologia con formulario de contacto y botón de whatsapp</p>
-        <a href="https://gwtsas.com/" target="_blank">Ver sitio</a>
+        <a href="https://thermicaing.com/" target="_blank">Ver sitio</a>
       </div>
     </div>
   </section>
