--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img class="github" src="css.webp" alt="GitHub" />
         </a>
         <a href="#">
-          <img src="perfil.png" alt="Otro" class="foto" />
+          <img src="perfil.png" alt="Otro" class="foto" width:150px />
         </a>
         <a href="#" target="_blank" rel="noopener noreferrer">
           <img class="linkedin" src="java.webp" alt="LinkedIn" />
