--- a/index.html
+++ b/index.html
@@ -214,13 +214,19 @@
     <div class="container">
       <h2 class="reveal">Animaciones interactivas</h2>
       <p class="muted reveal">Creo <strong>microinteracciones</strong> y <strong>animaciones</strong> (scroll, hover y parallax sutil) que guían la atención, refuerzan la marca y aumentan la <strong>conversión</strong> sin distraer.
-Resultado: interfaz más viva, <strong>feedback</strong> claro y una experiencia que invita a seguir navegando.</p>
-      <div class="grid features">
-        <div class="card reveal"><strong>Scroll reveal:</strong> cada bloque aparece al entrar en viewport (esta web lo hace).</div>
-        <div class="card reveal"><strong>Hover:</strong> botones, tarjetas y enlaces reaccionan sin recargar la página.</div>
-        <div class="card reveal"><strong>Parallax:</strong> hero con movimiento sutil según el scroll y el mouse.</div>
-        <div class="card reveal"><strong>Contadores:</strong> números animados que muestran impacto y resultados.</div>
-      </div>
+      Resultado: interfaz más viva, <strong>feedback</strong> claro y una experiencia que invita a seguir navegando.</p>
+      <div class="servicios-two-col">
+        <div class="grid features">
+          <div class="card tilt reveal"><strong>Scroll reveal:</strong> cada bloque aparece al entrar en viewport.</div>
+          <div class="card tilt reveal"><strong>Hover:</strong> botones, tarjetas y enlaces reaccionan sin recargar la página.</div>
+          <div class="card tilt reveal"><strong>Parallax:</strong> hero con movimiento sutil según el scroll y el mouse.</div>
+          <div class="card tilt reveal"><strong>Contadores:</strong> números animados que muestran impacto y resultados.</div>
+        </div>
+        <div style="display:flex; justify-content:center; align-items:center;">
+          <img src="escudoc.webp" alt="" id="animacionEscudo">
+        </div>
+      </div>      
+
     </div>
   </section>
 
@@ -229,12 +235,17 @@ Resultado: interfaz más viva, <strong>feedback</strong> claro y una experiencia
     <div class="container">
       <h2 class="reveal">SEO técnico desde el código</h2>
        <p class="muted reveal">Optimizo la <strong>estructura semántica</strong>, la <strong>velocidad</strong> (<strong>Core Web Vitals</strong>) y el <strong>contenido</strong> para que los buscadores entiendan tu propuesta y los usuarios tengan una experiencia fluida. Además, una <strong>arquitectura clara</strong> facilita el <strong>rastreo e indexación</strong>. Resultado: <strong>mayor visibilidad</strong>.</p>
-      <div class="grid features">
-        <div class="card reveal"><strong>Metas y OG:</strong> títulos, descripciones y tarjetas sociales listos.</div>
-        <div class="card reveal"><strong>HTML semántico:</strong> headings y landmarks correctos.</div>
-        <div class="card reveal"><strong>Rich Snippets:</strong> JSON‑LD para servicios/persona.</div>
-        <div class="card reveal"><strong>Velocidad:</strong> imágenes WebP/AVIF, minificación y lazy load.</div>
+      <div class="servicios-two-col">
+        <img src="imgseo1.webp" alt="" style="width: 100%; max-width: 600px; min-width: 300px;">  
+        <div class="grid features">
+          <div class="card tilt reveal"><strong>Metas y OG:</strong> títulos, descripciones y tarjetas sociales listos.</div>
+          <div class="card tilt reveal"><strong>HTML semántico:</strong> headings y landmarks correctos.</div>
+          <div class="card tilt reveal"><strong>Rich Snippets:</strong> JSON‑LD para servicios/persona.</div>
+          <div class="card tilt reveal"><strong>Velocidad:</strong> imágenes WebP/AVIF, minificación y lazy load.</div>
+        </div>
+        
       </div>
+        
     </div>
   </section>
 
@@ -244,12 +255,14 @@ Resultado: interfaz más viva, <strong>feedback</strong> claro y una experiencia
     <div class="container">
       <h2 class="reveal">Rendimiento y tiempos de carga</h2>
       <p class="muted reveal">Imágenes WebP/AVIF, lazy load, minificación, carga selectiva, caché + CDN y <em>critical CSS</em>. Objetivo: <strong>LCP &lt; 2.5s</strong>, <strong>CLS &lt; .1</strong>, <strong>90–100/100</strong> en móvil.</p>
-      <div class="grid features">
-        <div class="card reveal">Comparo y mejoro Core Web Vitals: LCP, INP (antes FID) y CLS.</div>
-        <div class="card reveal">Elimino dependencias pesadas y cargo sólo lo necesario.</div>
-        <div class="card reveal">Hosting optimizado + CDN para servir archivos cercanos al usuario.</div>
-        <div class="card reveal">Estrategias de <em>preload</em>, <em>defer</em> y <em>lazy</em> para JS y medios.</div>
-      </div>
+      <div class="servicios-two-col">
+        <div class="grid features">
+          <div class="card tilt reveal">Comparo y mejoro Core Web Vitals: LCP, INP (antes FID) y CLS.</div>
+          <div class="card tilt reveal">Elimino dependencias pesadas y cargo sólo lo necesario.</div>
+          <div class="card tilt reveal">Hosting optimizado + CDN para servir archivos cercanos al usuario.</div>
+          <div class="card tilt reveal">Estrategias de <em>preload</em>, <em>defer</em> y <em>lazy</em> para JS y medios.</div>
+        </div>
+      </div>      
     </div>
   </section>
 
