--- a/index.html
+++ b/index.html
@@ -262,6 +262,41 @@
           <div class="card tilt reveal">Hosting optimizado + CDN para servir archivos cercanos al usuario.</div>
           <div class="card tilt reveal">Estrategias de <em>preload</em>, <em>defer</em> y <em>lazy</em> para JS y medios.</div>
         </div>
+        <div>
+          <div class="kpis" id="kpis-rendimiento">
+  <article class="kpi card reveal">
+    <div class="kpi-num">
+      <span class="counter" data-to="2.5" data-decimals="1">0</span><small>s</small>
+    </div>
+    <div class="muted">LCP (objetivo)</div>
+    <div class="bar"><span data-bar="90"></span></div>
+  </article>
+
+  <article class="kpi card reveal">
+    <div class="kpi-num">
+      <span class="counter" data-to="0.1" data-decimals="2">0</span>
+    </div>
+    <div class="muted">CLS (estable)</div>
+    <div class="bar"><span data-bar="95"></span></div>
+  </article>
+
+  <article class="kpi card reveal">
+    <div class="kpi-num">
+      <span class="counter" data-to="100" data-decimals="0">0</span><small>/100</small>
+    </div>
+    <div class="muted">PageSpeed móvil</div>
+    <div class="bar"><span data-bar="92"></span></div>
+  </article>
+
+  <article class="kpi card reveal">
+    <div class="kpi-num">
+      <span class="counter" data-to="300" data-decimals="0">0</span><small>ms</small>
+    </div>
+    <div class="muted">INP (interacción)</div>
+    <div class="bar"><span data-bar="88"></span></div>
+  </article>
+</div>
+        </div>
       </div>      
     </div>
   </section>
