--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         </section>
 
         <!-- Tarjeta 5 -->
-        <section class="code-card c5 float" style="--ry:34deg; --z:120px">
+        <section class="code-card c5 float reveal" style="--ry:34deg; --z:120px">
           <div class="dots"><span class="dot red"></span><span class="dot yellow"></span><span class="dot green"></span></div>
           <pre class="code"><span class="c">// utils.ts</span>
           <span class="k">export</span> <span class="k">const</span> delay=(ms)=> <span class="k">new</span> <span class="fn">Promise</span>(r=> <span class="fn">setTimeout</span>(r,ms))</pre>
         </section>
 
         <!-- Tarjeta 6 -->
-        <section class="code-card c6 float" style="--ry:-23deg; --z:75px">
+        <section class="code-card c6 float reveal" style="--ry:-23deg; --z:75px">
           <div class="dots"><span class="dot red"></span><span class="dot yellow"></span><span class="dot green"></span></div>
           <pre class="code"><span class="c">// index.html</span>
           &lt;<span class="k">div</span> class=<span class="s">"app"</span>&gt;Hola Mundo&lt;/<span class="k">div</span>&gt;</pre>
@@ -223,7 +223,7 @@
           <div class="card tilt reveal"><strong>Contadores:</strong> números animados que muestran impacto y resultados.</div>
         </div>
         <div style="display:flex; justify-content:center; align-items:center;">
-          <img src="escudoc.webp" alt="" id="animacionEscudo">
+          <img src="escudoc.webp" alt="" id="animacionEscudo" class="reveal">
         </div>
       </div>      
 
@@ -236,7 +236,7 @@
       <h2 class="reveal">SEO técnico desde el código</h2>
        <p class="muted reveal">Optimizo la <strong>estructura semántica</strong>, la <strong>velocidad</strong> (<strong>Core Web Vitals</strong>) y el <strong>contenido</strong> para que los buscadores entiendan tu propuesta y los usuarios tengan una experiencia fluida. Además, una <strong>arquitectura clara</strong> facilita el <strong>rastreo e indexación</strong>. Resultado: <strong>mayor visibilidad</strong>.</p>
       <div class="servicios-two-col">
-        <img src="imgseo1.webp" alt="" style="width: 100%; max-width: 600px; min-width: 300px;">  
+        <img src="imgseo1.webp" alt="" class="reveal" style="width: 100%; max-width: 600px; min-width: 300px;">  
         <div class="grid features">
           <div class="card tilt reveal"><strong>Metas y OG:</strong> títulos, descripciones y tarjetas sociales listos.</div>
           <div class="card tilt reveal"><strong>HTML semántico:</strong> headings y landmarks correctos.</div>
