--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     <div class="container">
       <h2 class="reveal">Planes y Precios</h2>
       <p class="muted reveal">Tabla referencial (COP). Se ajusta según alcance, integraciones y tiempos.</p>
-      <div class="card reveal" style="overflow:auto">
+      <div class="card" style="overflow:auto">
         <table aria-label="Tabla de precios">
           <thead>
             <tr>
