--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Soy Frederick Corredor, desarrollador web front‑end. Creo sitios únicos, rápidos, responsivos y optimizados para SEO con HTML, CSS, JavaScript y WordPress." />
   <meta name="theme-color" content="#0b0b0b" />
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" href="icono.webp" type="image/x-icon">
+  <link rel="shortcut icon" href="icono.webp" type="image/webp">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Frederick Corredor — Desarrollador Web" />
   <meta property="og:description" content="Webs únicas, rápidas y listas para convertir: HTML, CSS, JS, UX/UI, SEO, WordPress." />
   <meta property="og:image" content="frederickcorredorlogo.webp" />
-  <meta property="og:url" content="#" />
+  <meta property="og:url" content="https://frederickcorredor.github.io/portafolio/" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Schema.org (JSON-LD) -->
@@ -24,7 +24,7 @@
     "@type": "Person",
     "name": "Frederick Corredor",
     "jobTitle": "Web Developer",
-    "url": "#",
+    "url": "https://frederickcorredor.github.io/portafolio/",
     "image": "frederickcorredorlogo.webp",
     "knowsAbout": ["HTML", "CSS", "JavaScript", "WordPress", "UX", "UI", "SEO"],
     "sameAs": ["#", "#"]
@@ -380,59 +380,7 @@
   </div>
 </section>
 
-  <!-- Elementor vs Yo -->
-  <section class="section" id="elementor">
-    <div class="container">
-      <h2 class="reveal">¿Mejor que Elementor? Sí, en rendimiento y personalización</h2>
-      <div class="compare">
-        <div class="card reveal">
-          <h3>Elementor / No‑code</h3>
-          <ul>
-            <li>Código pesado por widget y CSS/JS duplicado.</li>
-            <li>Diseños repetidos y limitaciones para interacciones avanzadas.</li>
-            <li>Dependencia de un ecosistema externo.</li>
-          </ul>
-        </div>
-        <div class="card reveal">
-          <h3>Código a medida conmigo</h3>
-          <ul>
-            <li>Web ligera (&lt; 1 MB), menos requests, mejor PageSpeed.</li>
-            <li>Diseño único + animaciones personalizadas.</li>
-            <li>SEO técnico impecable y escalabilidad real.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
 
-
-
-  <!-- Testimonios (Carrusel) -->
-  <section class="section" id="testimonios">
-    <div class="container">
-      <h2 class="reveal">Opiniones de clientes</h2>
-      <div class="carousel reveal" role="region" aria-label="Carrusel de testimonios">
-        <div class="track" id="track" aria-live="polite">
-          <div class="slide">
-            <blockquote>“Frederick transformó nuestra presencia digital. La web carga rapidísimo y las consultas aumentaron desde el primer mes.”</blockquote>
-            <footer>— Renacer Creativo</footer>
-          </div>
-          <div class="slide">
-            <blockquote>“Nos entregó un sitio elegante, con animaciones modernas y 100% administrable. ¡Excelente trabajo!”</blockquote>
-            <footer>— Paradise Travel</footer>
-          </div>
-          <div class="slide">
-            <blockquote>“Pasamos de Elementor a una plantilla a medida. El rendimiento y el SEO mejoraron notablemente.”</blockquote>
-            <footer>— SAMA Market Research</footer>
-          </div>
-        </div>
-        <div class="controls">
-          <button id="prev" aria-label="Anterior">⟵</button>
-          <button id="next" aria-label="Siguiente">⟶</button>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Portfolio -->
   <section class="section" id="portfolio">
@@ -488,6 +436,59 @@
                   </div>
                   <a class="visit" href="https://agmen.co/" target="_blank" rel="noopener">Ver proyecto</a>
                 </article>
+      </div>
+    </div>
+  </section>
+
+
+    <!-- Elementor vs Yo -->
+  <section class="section" id="elementor">
+    <div class="container">
+      <h2 class="reveal">¿Mejor que Elementor? Sí, en rendimiento y personalización</h2>
+      <div class="compare">
+        <div class="card reveal">
+          <h3>Elementor / No‑code</h3>
+          <ul>
+            <li>Código pesado por widget y CSS/JS duplicado.</li>
+            <li>Diseños repetidos y limitaciones para interacciones avanzadas.</li>
+            <li>Dependencia de un ecosistema externo.</li>
+          </ul>
+        </div>
+        <div class="card reveal">
+          <h3>Código a medida conmigo</h3>
+          <ul>
+            <li>Web ligera (&lt; 1 MB), menos requests, mejor PageSpeed.</li>
+            <li>Diseño único + animaciones personalizadas.</li>
+            <li>SEO técnico impecable y escalabilidad real.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <!-- Testimonios (Carrusel) -->
+  <section class="section" id="testimonios">
+    <div class="container">
+      <h2 class="reveal">Opiniones de clientes</h2>
+      <div class="carousel reveal" role="region" aria-label="Carrusel de testimonios">
+        <div class="track" id="track" aria-live="polite">
+          <div class="slide">
+            <blockquote>“Frederick transformó nuestra presencia digital. La web carga rapidísimo y las consultas aumentaron desde el primer mes.”</blockquote>
+            <footer>— Renacer Creativo</footer>
+          </div>
+          <div class="slide">
+            <blockquote>“Nos entregó un sitio elegante, con animaciones modernas y 100% administrable. ¡Excelente trabajo!”</blockquote>
+            <footer>— Paradise Travel</footer>
+          </div>
+          <div class="slide">
+            <blockquote>“Pasamos de Elementor a una plantilla a medida. El rendimiento y el SEO mejoraron notablemente.”</blockquote>
+            <footer>— SAMA Market Research</footer>
+          </div>
+        </div>
+        <div class="controls">
+          <button id="prev" aria-label="Anterior">⟵</button>
+          <button id="next" aria-label="Siguiente">⟶</button>
+        </div>
       </div>
     </div>
   </section>
