--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
         <div class="stats reveal" style="margin-top:22px">
           <div class="stat"><h3><span class="counter" data-to="100">0</span>/100</h3><div class="muted">PageSpeed Móvil</div><div class="bar"><span data-bar="92"></span></div></div>
-          <div class="stat"><h3><span class="counter" data-to="2" data-decimals="0">0</span>s</h3><div class="muted">LCP objetivo</div><div class="bar"><span data-bar="85"></span></div></div>
-          <div class="stat"><h3><span class="counter" data-to="0.1" data-decimals="1">0</span></h3><div class="muted">CLS estable</div><div class="bar"><span data-bar="95"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="25" data-decimals="0">0</span>s</h3><div class="muted">Proyectos Entregados</div><div class="bar"><span data-bar="85"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="5" data-decimals="0">0</span></h3><div class="muted">Años de Experiencia</div><div class="bar"><span data-bar="95"></span></div></div>
         </div>
       </div>
 
