--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
   </header>
 
   <!-- HERO (AIDA: Atención) -->
-  <section class="hero section" id="top" aria-label="Hero">
+  <section class="hero section" aria-label="Hero">
     <div class="spark" aria-hidden="true"></div>
     <div class="container">
       <div>
-        <span class="tag reveal">Desarrollador Web • HTML • CSS • JS • WordPress</span>
+        <span class="tag reveal" id="top">Desarrollador Web • HTML • CSS • JS • WordPress</span>
         <h1 class="hero-title reveal" style="margin:.6rem 0 1rem">Creo webs únicas, rápidas y listas para convertir</h1>
         <p class="hero-sub reveal"><b>Soy</b> <strong>Frederick Corredor</strong> <b>y mi enfoque es simple:</b> <br>
         Sitios Web que cargan en segundos, diseños que la gente quiere usar y estrategias pensadas para que tu web genere ingresos reales.</p>
