--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
           </label> <br>
           <button class="btn" type="submit">Enviar</button>
         </form>
-        <p id="formMsg" class="muted"></p>
+        <p id="formMsg" class="muted" style="font-size: 24px;;"></p>
       </div>
     </div>
   </section>
