--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <a class="btn secondary" href="#portfolio">Ver trabajos</a>
         </div>
         <div class="stats reveal" style="margin-top:22px">
-          <div class="stat"><h3><span class="counter" data-to="100">0</span>/100</h3><div class="muted">PageSpeed Móvil</div><div class="bar"><span data-bar="92"></span></div></div>
-          <div class="stat"><h3><span class="counter" data-to="25" data-decimals="0">0</span>s</h3><div class="muted">Proyectos Entregados</div><div class="bar"><span data-bar="85"></span></div></div>
-          <div class="stat"><h3><span class="counter" data-to="5" data-decimals="0">0</span></h3><div class="muted">Años de Experiencia</div><div class="bar"><span data-bar="95"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="96">0</span>/100</h3><div class="muted">Reseñas de satisfación</div><div class="bar"><span data-bar="92"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="75" data-decimals="0">0</span></h3><div class="muted">Proyectos Entregados</div><div class="bar"><span data-bar="85"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="6" data-decimals="0">0</span></h3><div class="muted">Años de Experiencia</div><div class="bar"><span data-bar="95"></span></div></div>
         </div>
       </div>
 
@@ -185,8 +185,8 @@
   <section class="section" id="uxui">
     <div class="container">
       <h2 class="reveal">Claridad, consistencia y microdetalles</h2>
-      <p class="muted reveal">
-      Priorizo la <strong>arquitectura de información y jerarquía visual</strong>, los <strong>microdetalles</strong>que hacen la interfaz predecible y agradable. <br><br> <b>Resultado:</b> navegación intuitiva, menos dudas y <strong>más conversión</strong>.
+      <p class="muted reveal" style="text-align: center;">
+      Priorizo la <strong>arquitectura de información y jerarquía visual</strong>, los <strong>microdetalles</strong>que hacen la interfaz predecible y agradable. <br><br> 
       </p>
       <div class="compare">
         <div class="card reveal">
@@ -206,6 +206,7 @@
           </ul>
         </div>
       </div>
+      <h4 style="text-align: center;margin-top: 24px;"><b>Resultado:</b> navegación intuitiva, menos dudas y <strong>más conversión</strong>.</h4>
     </div>
   </section>
 
@@ -217,10 +218,10 @@
       Resultado: interfaz más viva, <strong>feedback</strong> claro y una experiencia que invita a seguir navegando.</p>
       <div class="servicios-two-col">
         <div class="grid features">
-          <div class="card tilt reveal"><strong>Scroll reveal:</strong> cada bloque aparece al entrar en viewport.</div>
-          <div class="card tilt reveal"><strong>Hover:</strong> botones, tarjetas y enlaces reaccionan sin recargar la página.</div>
-          <div class="card tilt reveal"><strong>Parallax:</strong> hero con movimiento sutil según el scroll y el mouse.</div>
-          <div class="card tilt reveal"><strong>Contadores:</strong> números animados que muestran impacto y resultados.</div>
+          <div class="card tilt reveal"><strong>Mayor engagement:</strong> El usuario interactúa más con la interfaz.</div>
+          <div class="card tilt reveal"><strong>Refuerza la identidad</strong> Transmite la personalidad de tu marca.</div>
+          <div class="card tilt reveal"><strong>Guía la navegación:</strong> Destaca lo importante sin saturar.</div>
+          <div class="card tilt reveal"><strong>Mejora la experiencia:</strong> Aporta dinamismo y claridad en cada acción.</div>
         </div>
         <div style="display:flex; justify-content:center; align-items:center;">
           <img src="escudoc.webp" alt="" id="animacionEscudo" class="reveal">
@@ -238,10 +239,10 @@
       <div class="servicios-two-col">
         <img src="imgseo1.webp" alt="" class="reveal" style="width: 100%; max-width: 600px; min-width: 300px;">  
         <div class="grid features">
-          <div class="card tilt reveal"><strong>Metas y OG:</strong> títulos, descripciones y tarjetas sociales listos.</div>
-          <div class="card tilt reveal"><strong>HTML semántico:</strong> headings y landmarks correctos.</div>
-          <div class="card tilt reveal"><strong>Rich Snippets:</strong> JSON‑LD para servicios/persona.</div>
-          <div class="card tilt reveal"><strong>Velocidad:</strong> imágenes WebP/AVIF, minificación y lazy load.</div>
+          <div class="card tilt reveal"><strong>Más visibilidad en Google</strong> Tu web aparece en mejores posiciones.</div>
+          <div class="card tilt reveal"><strong>Carga rápida:</strong> Menos rebote y más tiempo de permanencia.</div>
+          <div class="card tilt reveal"><strong>Tráfico de calidad:</strong> Llegan usuarios realmente interesados.</div>
+          <div class="card tilt reveal"><strong>Mayor retorno:</strong> Más contactos, ventas y oportunidades.</div>
         </div>
         
       </div>
@@ -254,7 +255,7 @@
   <section class="section" id="rendimiento">
     <div class="container">
       <h2 class="reveal">Rendimiento y tiempos de carga</h2>
-      <p class="muted reveal">Imágenes WebP/AVIF, lazy load, minificación, carga selectiva, caché + CDN y <em>critical CSS</em>. Objetivo: <strong>LCP &lt; 2.5s</strong>, <strong>CLS &lt; .1</strong>, <strong>90–100/100</strong> en móvil.</p>
+      <p class="muted reveal" style="text-align: center;">Imágenes WebP/AVIF, lazy load, minificación, carga selectiva, caché + CDN y <em>critical CSS</em>. Objetivo: <strong>LCP &lt; 2.5s</strong>, <strong>CLS &lt; .1</strong>, <strong>90–100/100</strong> en móvil.</p>
       <div class="servicios-two-col">
         <div class="grid features">
           <div class="card tilt reveal">Comparo y mejoro Core Web Vitals: LCP, INP (antes FID) y CLS.</div>
@@ -305,7 +306,7 @@
   <section class="section" id="diferenciador">
     <div class="container">
       <h2 class="reveal">Diseños únicos por página, coherentes con tu marca</h2>
-      <p class="muted reveal">Trabajo con un sistema de diseño: base consistente y variantes por sección/página. Sin clones, sin plantillas genéricas.</p>
+      <p class="muted reveal">Trabajo con un sistema de diseño: Base consistente y variantes por sección/página.<b> Sin clones, sin plantillas genéricas.</b></p>
     </div>
   </section>
 
