--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     "knowsAbout": ["HTML", "CSS", "JavaScript", "WordPress", "UX", "UI", "SEO"],
     "sameAs": ["#", "#"]
   }
+
+    <!-- etiqueta analitics-->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M09GZ5HPH7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M09GZ5HPH7');
+</script>
   </script>
 </head>
 <body>
