--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <a class="btn secondary" href="#portfolio">Ver trabajos</a>
         </div>
         <div class="stats reveal" style="margin-top:22px">
-          <div class="stat"><h3><span class="counter" data-to="96">0</span>/100</h3><div class="muted">Reseñas de satisfación</div><div class="bar"><span data-bar="92"></span></div></div>
+          <div class="stat"><h3><span class="counter" data-to="96">0</span>/100</h3><div class="muted">Reseñas positivas</div><div class="bar"><span data-bar="92"></span></div></div>
           <div class="stat"><h3><span class="counter" data-to="75" data-decimals="0">0</span></h3><div class="muted">Proyectos Entregados</div><div class="bar"><span data-bar="85"></span></div></div>
           <div class="stat"><h3><span class="counter" data-to="6" data-decimals="0">0</span></h3><div class="muted">Años de Experiencia</div><div class="bar"><span data-bar="95"></span></div></div>
         </div>
